--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,17 @@
           package="com.example.contacts">
 
     <application
-            android:allowBackup="true"
             android:name=".app.BaseApplication"
+            android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".presentation.onecontact.OneContactActivity"
+            android:parentActivityName=".presentation.listofcontacts.ContactsActivity"
+        >
+        </activity>
         <activity android:name=".presentation.listofcontacts.ContactsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
